# django_template

./: .flake8  .gunicorn.conf.py  Dockerfile  Makefile  README.MD  docker-compose.yml  replace.sh
django/: .gitignore  pyproject.toml
django/<<project_name>>/: .env.example
