[tool.poetry]
name = "<<project_name>>"
version = "0.0.1"
description = "<<project_description>>"
authors = ["Jaffar <jaffar.almaleki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
isort = "^5.10.1"
vulture = "^2.3"

[tool.black]
exclude = '''
/(
  | migrations
  | docker
)/

'''

[tool.isort]
profile = "black"
skip = ["migrations", "docker"]
filter_files = true

[tool.vulture]
exclude = ["migrations", "*.conf.py"]
min_confidence = 100
sort_by_size = true
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
